# msys2_mingw64_qt6-quick_deployment

./: .gitignore  LICENSE.txt  README.md
demo/: CMakeLists.txt  build_deploy.sh  main.cpp  qml.qrc
demo/qml/demo/: main.qml  qmldir
